docs/specs/fixtures/forge-v1/invalid/bad-magic.forge
# not a forge file
forge_version: 1
